[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_player"]

[sub_resource type="CircleShape2D" id="CircleShape2D_body"]
radius = 10.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hurtbox"]
radius = 12.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_player")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_body")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)

[node name="HurtboxArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="HurtboxShape" type="CollisionShape2D" parent="HurtboxArea"]
shape = SubResource("CircleShape2D_hurtbox")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
position_smoothing_enabled = true
position_smoothing_speed = 8.0

[node name="DashTrail" type="GPUParticles2D" parent="."]
emitting = false
amount = 12
lifetime = 0.4
one_shot = true
explosiveness = 0.8
local_coords = false

[node name="DashSound" type="AudioStreamPlayer2D" parent="."]

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
